# hemmer

./: .gitignore  Cargo.toml  LICENSE  README.md  checksum-Elixir.Hemmer.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: hemmer.ex
native/hemmer_nif/: Cargo.toml
native/hemmer_nif/src/: lib.rs
src/: error.rs  lib.rs  pipeline.rs
src/transformers/: attribute_to_style.rs  base_url.rs  class_cleanup.rs  email_compat_css.rs  html_transforms.rs  inline_css.rs  meta_tags.rs  minify.rs  mod.rs  outlook_tags.rs  purge_css.rs  remove_attributes.rs  resolve_calc.rs  resolve_props.rs  safe_class_names.rs  style_to_attr.rs  tailwind.rs  url_params.rs  widows.rs
tests/: pipeline_test.rs
