[package]
name = "hemmer"
version = "0.1.0"
edition = "2024"
description = "Rust-powered email HTML transformation pipeline"
license = "MIT"
repository = "https://github.com/ringvold/hemmer"
keywords = ["email", "html", "css-inline", "tailwind", "maizzle"]
categories = ["web-programming", "text-processing"]
readme = "README.md"

[dependencies]
css-inline = "0.14"
encre-css = "0.20"
lol_html = "2.1"
lightningcss = "1.0.0-alpha.71"
minify-html = "0.15"
regex = "1"
thiserror = "2"
